--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.vaadin.addons.example</groupId>
-    <artifactId>clock</artifactId>
+    <groupId>org.vaadin.addons</groupId>
+    <artifactId>themeselect</artifactId>
     <version>1.0.0</version>
-    <name>Clock</name>
-    <description>Clock widget example for Vaadin</description>
+    <name>Theme Select</name>
+    <description>Theme select components for Vaadin</description>
 
     <properties>
         <vaadin.version>24.5.3</vaadin.version>
@@ -22,7 +22,7 @@
     </properties>
 
     <organization>
-        <name>###author###</name>
+        <name>Jouni Koivuviita</name>
     </organization>
     <licenses>
         <license>
