--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ hs_err_pid*
 error-screenshots
 frontend/generated
 frontend/index.html
+src/main/frontend/generated
+src/main/frontend/index.html
 .npmrc
 .pnpmfile.cjs
 package.json
@@ -36,3 +38,7 @@ src/main/resources/META-INF/resources/frontend/generated
 src/main/resources/META-INF/resources/frontend/index.html
 /target/
 node_modules
+vite.generated.ts
+vite.config.ts
+/.vscode
+package-lock.json
