--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.vaadin.addons</groupId>
+    <groupId>org.vaadin.addons.themeselect</groupId>
     <artifactId>themeselect</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <name>Theme Select</name>
     <description>Theme select components for Vaadin</description>
 
